--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,39 @@ scipy==1.3.0
 six==1.12.0
 typed-ast==1.4.0
 wrapt==1.11.2
+absl-py==0.7.1
+astor==0.8.0
+astroid==2.2.5
+Box2D==2.3.2
+box2d-py==2.3.8
+cloudpickle==1.2.1
+colorama==0.4.1
+cycler==0.10.0
+future==0.17.1
+gast==0.2.2
+google-pasta==0.1.7
+grpcio==1.22.0
+gym==0.14.0
+h5py==2.9.0
+isort==4.3.20
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.1
+Markdown==3.1.1
+mccabe==0.6.1
+numpy==1.17.0
+protobuf==3.9.0
+pyglet==1.3.2
+pylint==2.3.1
+pyparsing==2.4.1.1
+python-dateutil==2.8.0
+scipy==1.3.0
+six==1.12.0
+tensorboard==1.14.0
+tensorflow-estimator==1.14.0
+termcolor==1.1.0
+typed-ast==1.3.5
+virtualenv==16.7.2
+Werkzeug==0.15.5
+wrapt==1.11.1
